[tool.poetry]
name = "pmid2fulltext"
version = "0.1.0"
description = ""
authors = ["iQuxLE <ckroll95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
biopython = "^1.84"
click = "^8.1.7"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
ontogpt = "^1.0.5"
oaklib = "^0.6.16"
inflection = "^0.5.1"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

